tests/invalid_syn/syn10.java
class Main {
    static void run () {
        return;
    }
    static int foo.pes() {
        return 0;
    }
}
